@@ -1,9 +1,10 @@
-package com.ordwen.odailyquests.commands.completers;
+package com.ordwen.odailyquests.commands.admin;
 
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.util.StringUtil;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -13,7 +14,7 @@ import java.util.List;
 public class AdminCompleter implements TabCompleter {
 
     @Override
-    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
+    public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, String[] args) {
         if (args.length <= 1) {
             List<String> allCompletions = new ArrayList<>(Arrays.asList("reload", "reset", "show", "complete", "help", "holo", "convert"));
             List<String> completions = new ArrayList<>();
@@ -41,7 +42,7 @@ public class AdminCompleter implements TabCompleter {
                 return completions;
             }
             else if (args[0].equalsIgnoreCase("convert")) {
-                List<String> allCompletions = new ArrayList<>(Arrays.asList("yaml"));
+                List<String> allCompletions = new ArrayList<>(List.of("yaml"));
                 List<String> completions = new ArrayList<>();
 
                 StringUtil.copyPartialMatches(args[1], allCompletions, completions);
